<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_sms_settings"
            android:icon="@drawable/sms_setting"
            android:title="@string/sms_settings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/bulk_sms"
            android:title="@string/bulk_sms" />
        <item
            android:id="@+id/nav_whatsapp"
            android:icon="@drawable/whatsapp"
            android:title="@string/whatsapp_send" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>