<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#768C8C"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#11AEAE"
                android:onClick="loginOnClick"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="#11AEAE"
                android:onClick="registerOnClick"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:onClick="howWeWorkOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/how_we_work"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>
</layout>