<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginResponseModel"
            type="com.auto_reply.model.LoginResponseModel" />

        <variable
            name="sMSSettingsFragment"
            type="com.auto_reply.ui.sms_setting.SMSSettingsFragment" />

        <variable
            name="updatedMessageModel"
            type="com.auto_reply.model.UpdatedMessageModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sms_service"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{loginResponseModel.responsePacket.SMS_SERVICE}" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/whatsapp_service"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{loginResponseModel.responsePacket.WHATSAPP_SERVICE}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unique_message_setting"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_unique_message_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{loginResponseModel.responsePacket.UNIQUE_MESSAGE_SETTING}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeat_mode"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_repeat_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{loginResponseModel.responsePacket.REPEAT_MODE}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_sim"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_sim_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rb_sim_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/incoming_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{sMSSettingsFragment.incomingMessageClick}"
                    android:text="@string/template"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_bg"
                android:gravity="start|top"
                android:lines="3"
                android:padding="@dimen/_4sdp"
                android:text="@={updatedMessageModel.incomingMessage}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outgoing_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{sMSSettingsFragment.outgoingMessageClick}"
                    android:text="@string/template"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_bg"
                android:gravity="start|top"
                android:lines="3"
                android:padding="@dimen/_4sdp"
                android:text="@={updatedMessageModel.outgoingMessage}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/missed_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{sMSSettingsFragment.missedMessageClick}"
                    android:text="@string/template"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_bg"
                android:gravity="start|top"
                android:lines="3"
                android:padding="@dimen/_4sdp"
                android:text="@={updatedMessageModel.missedMessage}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/your_website_url" />

                <CheckBox
                    android:id="@+id/cb_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{loginResponseModel.responsePacket.WEB_URL}" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_bg"
                android:gravity="start|top"
                android:maxLines="1"
                android:padding="@dimen/_4sdp"
                android:singleLine="true"
                android:text="@={updatedMessageModel.webSiteUrl}" />

            <Button
                android:id="@+id/btn_save_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</layout>