<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F4F4"
        tools:context=".ui.home.HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_sms_setting"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/sms_setting" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/sms_settings" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_bulk_sms"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/bulk_sms" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/bulk_sms" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_whatsapp_send"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/whatsapp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/whatsapp_send" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_update_profile"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/update_profile" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/update_profile" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_invite"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/invitation" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/invitation" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_share"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:src="@drawable/share" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/share" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_registration_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:textColor="@color/black" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>